Changes to Product model

--- a/TSAR/Views/Manage/ClientMenu.cshtml
+++ b/TSAR/Views/Manage/ClientMenu.cshtml
@@ -16,8 +16,12 @@
         <td><input type="button" style="height:50px;width:200px" title="Rate Consultant" value="Rate Consultant" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Rating")'" /></td>
     </tr>
         
+    <tr>
+        <td><input type="button" style="height:50px;width:200px" title="Sign Off Timesheet" value="Sign Off Timesheet" class="btn btn-primary" onclick="location.href='@Url.Action("ViewTimeheets", "Timesheets")'" /></td>
+    </tr>
+        
         <tr>
-            <td><input type="button" style="height:50px;width:200px" title="Sign Off Timesheet" value="Sign Off Timesheet" class="btn btn-primary" onclick="location.href='@Url.Action("ViewTimeheets", "Timesheets")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="Get Quotation" value="Get Quotation" class="btn btn-primary" onclick="location.href='@Url.Action("GetQuotation", "Products")'" /></td>
         </tr>
     </tbody>
 </table>
