--- a/TSAR/Views/Products/Delete.cshtml
+++ b/TSAR/Views/Products/Delete.cshtml
@@ -1,13 +1,13 @@
 ﻿@model TSAR.Models.Product
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Product";
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Delete</h2>
+<h2>Delete Product</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this product?</h3>
 <div>
     <h4>Product</h4>
     <hr />
@@ -27,13 +27,22 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
+        
 
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ClientName)
+        </dt>
+
+        @*<dd>
+            @Html.DisplayFor(model => model.ClientName)
         </dd>
 
         <dt>
@@ -42,7 +51,7 @@
 
         <dd>
             @Html.DisplayFor(model => model.Email)
-        </dd>
+        </dd>*@
 
     </dl>
 
