--- a/TSAR/Views/Products/Details.cshtml
+++ b/TSAR/Views/Products/Details.cshtml
@@ -8,7 +8,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Product</h4>
+    <h4>Products</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -26,13 +26,21 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
-
+        
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
+        @*<dt>
+            @Html.DisplayNameFor(model => model.ClientName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ClientName)
         </dd>
 
         <dt>
@@ -41,11 +49,11 @@
 
         <dd>
             @Html.DisplayFor(model => model.Email)
-        </dd>
+        </dd>*@
 
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ProductId }) |
+    @Html.ActionLink("Edit", "EditProduct", new { id = Model.ProductId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
