added fallback password

--- a/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
@@ -8,7 +8,11 @@
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content>
-        <StackLayout Padding="20,10" x:Name="StackLayout" IsVisible="False">
+        <StackLayout Padding="20,10" x:Name="StackLayout" IsVisible="True">
+            <Entry x:Name="PasswordEntry" IsPassword="True" IsVisible="True" TextChanged="PasswordEntry_OnTextChanged"></Entry>
+            <Button x:Name="ValdatePasswordButton" IsVisible="True" Text="Validate" Clicked="ValdatePasswordButton_OnClicked"></Button>
+            <Button x:Name="FingerprintButton" Text="Use Fingerprint" IsVisible="True" Clicked="FingerprintButton_OnClicked"></Button>
+            <StackLayout x:Name="StackLayout2" IsVisible="False" Padding="20,10">
             <SearchBar Placeholder="Search clients..." IsVisible="False" TextChanged="SearchBar_OnTextChanged"></SearchBar>
             <Picker x:Name="ClientPicker" SelectedIndexChanged="ClientPicker_OnSelectedIndexChanged"></Picker>
            <ListView x:Name="PasswordsListView" HasUnevenRows="True" IsPullToRefreshEnabled="True" Refreshing="PasswordsListView_OnRefreshing">
@@ -27,6 +31,7 @@
                    </DataTemplate>
                </ListView.ItemTemplate>
            </ListView>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
