--- a/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileTsar.Views.ClientPasswordsPage"
-             Title="Client Passwords">
+             Title="Client Passwords"
+             BackgroundImage="GeoBak.jpg"
+             BackgroundColor="Transparent">
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="New" x:Name="NewPassToolbarItem" Clicked="NewPassToolbarItem_OnClicked"></ToolbarItem>
     </ContentPage.ToolbarItems>
