--- a/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
+++ b/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:MobileTsar.ViewModels;assembly=MobileTsar"
              x:Class="MobileTsar.Views.AddNewTimesheetPage"
-             Title="New Timesheet">
+             Title="New Timesheet"
+             BackgroundImage="GeoBak.jpg"
+             BackgroundColor="Transparent">
   
 
 <ContentPage.BindingContext>
