--- a/MobileTsar/MobileTsar/Views/LoginPage.xaml
+++ b/MobileTsar/MobileTsar/Views/LoginPage.xaml
@@ -3,7 +3,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:MobileTsar.ViewModels;assembly=MobileTsar"
-             x:Class="MobileTsar.Views.LoginPage">
+             x:Class="MobileTsar.Views.LoginPage"
+             BackgroundImage="GeoBak.jpg"
+             BackgroundColor="Transparent">
     
   <!--<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />-->
   <ContentPage.BindingContext>
