--- a/MobileTsar/MobileTsar/Views/NewClientPasswordPage.xaml
+++ b/MobileTsar/MobileTsar/Views/NewClientPasswordPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModels="clr-namespace:MobileTsar.ViewModels;assembly=MobileTsar"
              x:Class="MobileTsar.Views.NewClientPasswordPage"
-             Title="New Password">
+             Title="New Password"
+             BackgroundImage="GeoBak.jpg"
+             BackgroundColor="Transparent">
 
 
     <ContentPage.BindingContext>
