--- a/MobileTsar/MobileTsar/Views/NoInternetPage.xaml
+++ b/MobileTsar/MobileTsar/Views/NoInternetPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MobileTsar.Views.NoInternetPage"
-             Title="No Internet">
+             Title="No Internet"
+             BackgroundImage="GeoBak.jpg"
+             BackgroundColor="Transparent">
     <ContentPage.Content>
         <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
             <Label Text="No internet connection" FontSize="30"></Label>
