--- a/MobileTsar/MobileTsar/Views/TimesheetsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/TimesheetsPage.xaml
@@ -5,7 +5,8 @@
              x:Class="MobileTsar.Views.TimesheetsPage"
              Title="Timesheets"
              BackgroundImage="GeoBak.jpg"
-             BackgroundColor="Transparent">
+             BackgroundColor="Transparent"
+             >
 
     <ContentPage.BindingContext>
         <viewModels:TimesheetsViewModel>
@@ -16,7 +17,7 @@
     <ScrollView>
     <StackLayout Orientation="Vertical" Spacing="30" Padding="30" VerticalOptions="Center">
         <!--<Entry Text="{Binding AccessToken}"></Entry>-->
-        <Label x:Name="UsernameLabel" FontSize="40" HorizontalTextAlignment="Center"></Label>
+        <Label x:Name="UsernameLabel" TextColor="White" FontSize="40" HorizontalTextAlignment="Center"></Label>
         <Button Text="Log Off" Clicked="LogOffButton_OnClicked"></Button>
         <Button x:Name="GetTimesheetsButton" Clicked="GetTimesheetsButton_OnClicked"  Command="{Binding GetTimesheetsCommand}" Text="Get Timesheets"></Button>
         <Button x:Name="AddnewTimesheetBtn" Text="Add new timesheet" Clicked="Button_OnClicked"></Button>
