--- a/MobileTsar/MobileTsar/Views/SetPasswordPage.xaml
+++ b/MobileTsar/MobileTsar/Views/SetPasswordPage.xaml
@@ -7,21 +7,21 @@
              BackgroundColor="Transparent">
     <ContentPage.Content>
         <StackLayout Padding="20,10">
-            <StackLayout x:Name="ValidteStackLayout" IsVisible="False">
+            <StackLayout x:Name="ValidteStackLayout" IsVisible="False" Padding="20,10">
                 <Entry IsPassword="True" x:Name="CheckPasswordEntry"></Entry>
                 <Button x:Name="CheckpasswordButton" Text="Enter" Clicked="CheckpasswordButton_OnClicked"></Button>
             </StackLayout>
-            <StackLayout x:Name="EditStackLayout" IsVisible="False">
-                <Label x:Name="CurrentPasswordLabel" FontSize="25"></Label>
+            <StackLayout x:Name="EditStackLayout" IsVisible="False" Padding="20,10">
+                <Label x:Name="CurrentPasswordLabel" FontSize="25" TextColor="White"></Label>
                 <Button Text="Edit Password" Clicked="Button_OnClicked"></Button>
                 <Button x:Name="ClearButton" Text="Clear Password" Clicked="ClearButton_OnClicked"></Button>
             </StackLayout>
-            <StackLayout x:Name="NewPasswordStackLayout" IsVisible="False">
-            <Label Text="Enter a password for password vault" />
+            <StackLayout x:Name="NewPasswordStackLayout" IsVisible="False" Padding="20,10">
+            <Label TextColor="White" Text="Enter a password for password vault" FontSize="35" />
             <Entry IsPassword="True" x:Name="PasswordEntry" Placeholder="Enter a password" TextChanged="PasswordEntry_OnTextChanged"></Entry>
             <Entry IsPassword="True" x:Name="ValidatePasswordEntry" Placeholder="Validate password" TextChanged="ValidatePasswordEntry_OnTextChanged"></Entry>
             <!--<Button Text="Validate" Clicked="ValidateButton_OnClicked"  IsVisible="True"></Button>-->
-            <Label x:Name="ErrorLabel" IsVisible="False"></Label>
+            <Label x:Name="ErrorLabel" IsVisible="False" TextColor="Red"></Label>
             <Button Text="Save" x:Name="SaveButton" Clicked="SaveButton_OnClicked"  IsVisible="False"></Button>
             </StackLayout>
         </StackLayout>
