--- a/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
+++ b/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
@@ -15,23 +15,23 @@
 <ScrollView>
         <StackLayout  Orientation="Vertical" Spacing="30" Padding="30" VerticalOptions="Center" >
             <Label x:Name="UsernameLabel" IsVisible="False"></Label>
-            <Label Text="Consultant" TextColor="DeepSkyBlue"></Label>
+            <Label Text="Consultant" TextColor="White"></Label>
             <Label Text="{Binding Source={x:Reference UsernameLabel},Path=Text}"></Label>
             <!--<Picker x:Name="ConsultantPicker" SelectedIndexChanged="ConsultantPicker_OnSelectedIndexChanged"></Picker>-->
             <Entry x:Name="ConsultantIdLabel" Text="{Binding ConsultantNum}" IsVisible="False"></Entry>
-            <Label Text="Client:" TextColor="DeepSkyBlue"></Label>        
+            <Label Text="Client:" TextColor="White"></Label>        
             <Picker x:Name="ClientPicker" Title="Client Name" SelectedIndexChanged="ClientPicker_OnSelectedIndexChanged"></Picker>
             <Entry x:Name="ClientIdLabel" Text="{Binding Id}" IsVisible="False"></Entry>
-            <Label Text="Activity:" TextColor="DeepSkyBlue"></Label>
+            <Label Text="Activity:" TextColor="White"></Label>
             <Entry Text="{Binding ActivityDescription}"></Entry>
-            <Label Text="Start Time:" TextColor="DeepSkyBlue"></Label>
+            <Label Text="Start Time:" TextColor="White"></Label>
             <TimePicker x:Name="StartTimePicker" Time="{Binding StartTime}"></TimePicker>
-            <Label Text="End Time:" TextColor="DeepSkyBlue"></Label>
+            <Label Text="End Time:" TextColor="White"></Label>
             <TimePicker Time="{Binding EndTime}"></TimePicker>
-            <Label Text="Client Address:" TextColor="DeepSkyBlue"></Label>
+            <Label Text="Client Address:" TextColor="White"></Label>
             <Picker x:Name="AddressPicker" SelectedIndexChanged="AddressPicker_OnSelectedIndexChanged"></Picker>
             <Entry x:Name="AddressLabel" Text="{Binding MClientAddress}" IsVisible="False"></Entry>
-            <Label x:Name="AddressLabel1" Text="Client Address:" TextColor="DeepSkyBlue"></Label>
+            <Label x:Name="AddressLabel1" Text="Client Address:" TextColor="White"></Label>
             <Button x:Name="ValidateBtn" Text="Validate" Clicked="ValidateBtn_OnClicked"></Button>
             <Button x:Name="FinishBtn" Command="{Binding AddCommand}" Text="Finish" Clicked="Button_OnClicked" IsVisible="False" ></Button>
 
