--- a/MobileTsar/MobileTsar/Views/MyTimesheetsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/MyTimesheetsPage.xaml
@@ -9,13 +9,13 @@
              >
     <StackLayout Padding="20,10">
         <ActivityIndicator x:Name="LoadingActivityIndicator"></ActivityIndicator>
-        <Label x:Name="FilterLabel" VerticalOptions="Center" HorizontalOptions="Center" FontSize="25"></Label>
+        <Label x:Name="FilterLabel" TextColor="White" VerticalOptions="Center" HorizontalOptions="Center" FontSize="25"></Label>
     <Switch x:Name="SignedSwitch" HorizontalOptions="Center" VerticalOptions="Center" Toggled="SignedSwitch_OnToggled"></Switch>
   <ListView ItemsSource="{Binding Items}"
             ItemTapped="Handle_ItemTapped"   
             HasUnevenRows="True"
  SeparatorVisibility="Default"
-            SeparatorColor="Crimson"                   
+            SeparatorColor="Lime"                   
             >
             
     <!--Built in Cells-->
@@ -30,11 +30,11 @@
       <DataTemplate>
         <ViewCell>
           <StackLayout Padding="20,10">
-              <Label TextColor="DeepSkyBlue" FontSize="25" Text="Timesheet No. : " 
+                            <Label TextColor="White" FontSize="25" Text="Timesheet No. : " 
                      Style="{DynamicResource ListItemDetailTextStyle}"/>
                         <Label FontSize="24" Text="{Binding TimesheetId}" 
                    Style="{DynamicResource ListItemTextStyle}" />
-              <Label TextColor="DeepSkyBlue" FontSize="25" Text="Reference: " 
+                            <Label TextColor="White" FontSize="25" Text="Reference: " 
                      Style="{DynamicResource ListItemDetailTextStyle}"/>
                         <Label FontSize="24" Text="{Binding TicketReference}" 
                    Style="{DynamicResource ListItemDetailTextStyle}"/>  
