--- a/MobileTsar/MobileTsar/Views/NewClientPasswordPage.xaml
+++ b/MobileTsar/MobileTsar/Views/NewClientPasswordPage.xaml
@@ -14,14 +14,14 @@
     </ContentPage.BindingContext>
     <ScrollView>
         <StackLayout  Orientation="Vertical" Spacing="30" Padding="30" VerticalOptions="Center" >
-            <Label Text="Client:" TextColor="DeepSkyBlue"></Label>
-            <Picker x:Name="ClientPicker" Title="Client Name" SelectedIndexChanged="ClientPicker_OnSelectedIndexChanged"></Picker>
-            <Label Text="Operator:" TextColor="DeepSkyBlue"></Label>
-            <Entry x:Name="OperatorEntry" Text="{Binding Operator}"></Entry>
-            <Label Text="Operator Password:" TextColor="DeepSkyBlue"></Label>
-            <Entry x:Name="OperatorPasswordEntry" Text="{Binding OperatorPassword}"></Entry>
-            <Label Text="Company Password:" TextColor="DeepSkyBlue"></Label>
-            <Entry x:Name="CompanyPasswordEntry" Text="{Binding CompanyPassword}"></Entry>
+            <Label Text="Client:" TextColor="White"></Label>
+            <Picker x:Name="ClientPicker"  Title="Client Name" SelectedIndexChanged="ClientPicker_OnSelectedIndexChanged"></Picker>
+            <Label Text="Operator:" TextColor="White"></Label>
+            <Entry x:Name="OperatorEntry" PlaceholderColor="Black" Placeholder="Enter operator name"  Text="{Binding Operator}"></Entry>
+            <Label Text="Operator Password:" TextColor="White"></Label>
+            <Entry x:Name="OperatorPasswordEntry" PlaceholderColor="Black" Placeholder="Enter operator password" Text="{Binding OperatorPassword}"></Entry>
+            <Label Text="Company Password:" TextColor="White"></Label>
+            <Entry x:Name="CompanyPasswordEntry" PlaceholderColor="Black" Placeholder="Enter company password" Text="{Binding CompanyPassword}"></Entry>
             <Entry x:Name="ClientEntry" IsVisible="False" Text="{Binding id}"></Entry>
             <Button x:Name="ValidateBtn" Text="Validate" Clicked="ValidateBtn_OnClicked"></Button>
             <Button x:Name="FinishBtn" Command="{Binding AddCommand}" Text="Finish" Clicked="Button_OnClicked" IsVisible="False" ></Button>
