--- a/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
+++ b/MobileTsar/MobileTsar/Views/AddNewTimesheetPage.xaml
@@ -19,6 +19,7 @@
             <Label Text="{Binding Source={x:Reference UsernameLabel},Path=Text}"></Label>
             <!--<Picker x:Name="ConsultantPicker" SelectedIndexChanged="ConsultantPicker_OnSelectedIndexChanged"></Picker>-->
             <Entry x:Name="ConsultantIdLabel" Text="{Binding ConsultantNum}" IsVisible="False"></Entry>
+            <Entry x:Name="ConsultantFullNameLabel" Text="{Binding FullName}" IsVisible="False"></Entry>
             <Label Text="Client:" TextColor="White"></Label>        
             <Picker x:Name="ClientPicker" Title="Client Name" SelectedIndexChanged="ClientPicker_OnSelectedIndexChanged"></Picker>
             <Entry x:Name="ClientIdLabel" Text="{Binding Id}" IsVisible="False"></Entry>
