--- a/MobileTsar/MobileTsar/Views/NewClientPasswordPage.xaml
+++ b/MobileTsar/MobileTsar/Views/NewClientPasswordPage.xaml
@@ -23,8 +23,8 @@
             <Label Text="Company Password:" TextColor="White"></Label>
             <Entry x:Name="CompanyPasswordEntry" PlaceholderColor="Black" Placeholder="Enter company password" Text="{Binding CompanyPassword}"></Entry>
             <Entry x:Name="ClientEntry" IsVisible="False" Text="{Binding id}"></Entry>
-            <Button x:Name="ValidateBtn" Text="Validate" Clicked="ValidateBtn_OnClicked"></Button>
-            <Button x:Name="FinishBtn" Command="{Binding AddCommand}" Text="Finish" Clicked="Button_OnClicked" IsVisible="False" ></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White" x:Name="ValidateBtn" Text="Validate" Clicked="ValidateBtn_OnClicked"></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White" x:Name="FinishBtn" Command="{Binding AddCommand}" Text="Finish" Clicked="Button_OnClicked" IsVisible="False" ></Button>
 
         </StackLayout>
     </ScrollView>
