--- a/MobileTsar/MobileTsar/Views/SetPasswordPage.xaml
+++ b/MobileTsar/MobileTsar/Views/SetPasswordPage.xaml
@@ -9,12 +9,12 @@
         <StackLayout Padding="20,10">
             <StackLayout x:Name="ValidteStackLayout" IsVisible="False" Padding="20,10">
                 <Entry IsPassword="True" x:Name="CheckPasswordEntry"></Entry>
-                <Button x:Name="CheckpasswordButton" Text="Enter" Clicked="CheckpasswordButton_OnClicked"></Button>
+                <Button BackgroundColor="#4D6098" TextColor="White" x:Name="CheckpasswordButton" Text="Enter" Clicked="CheckpasswordButton_OnClicked"></Button>
             </StackLayout>
             <StackLayout x:Name="EditStackLayout" IsVisible="False" Padding="20,10">
                 <Label x:Name="CurrentPasswordLabel" FontSize="25" TextColor="White"></Label>
-                <Button Text="Edit Password" Clicked="Button_OnClicked"></Button>
-                <Button x:Name="ClearButton" Text="Clear Password" Clicked="ClearButton_OnClicked"></Button>
+                <Button BackgroundColor="#4D6098" TextColor="White" Text="Edit Password" Clicked="Button_OnClicked"></Button>
+                <Button BackgroundColor="#4D6098" TextColor="White" x:Name="ClearButton" Text="Clear Password" Clicked="ClearButton_OnClicked"></Button>
             </StackLayout>
             <StackLayout x:Name="NewPasswordStackLayout" IsVisible="False" Padding="20,10">
             <Label TextColor="White" Text="Enter a password for password vault" FontSize="35" />
@@ -22,7 +22,7 @@
             <Entry IsPassword="True" x:Name="ValidatePasswordEntry" Placeholder="Validate password" TextChanged="ValidatePasswordEntry_OnTextChanged"></Entry>
             <!--<Button Text="Validate" Clicked="ValidateButton_OnClicked"  IsVisible="True"></Button>-->
             <Label x:Name="ErrorLabel" IsVisible="False" TextColor="Red"></Label>
-            <Button Text="Save" x:Name="SaveButton" Clicked="SaveButton_OnClicked"  IsVisible="False"></Button>
+                <Button BackgroundColor="#4D6098" TextColor="White" Text="Save" x:Name="SaveButton" Clicked="SaveButton_OnClicked"  IsVisible="False"></Button>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
