--- a/TSAR/css/agency.css
+++ b/TSAR/css/agency.css
@@ -13,7 +13,7 @@ body {
   color: #777777;
 }
 .text-primary {
-  color: goldenrod;
+  color: white;
 }
 p {
   font-size: 14px;
@@ -30,13 +30,13 @@ a.active {
   outline: none;
 }
 a {
-  color: goldenrod;
+  color: #4D6098;
 }
 a:hover,
 a:focus,
 a:active,
 a.active {
-  color: goldenrod;
+  color: lime;
 }
 h1,
 h2,
@@ -59,20 +59,24 @@ h6 {
 }
 .btn-primary {
   color: white;
-  background-color: goldenrod;
-  border-color: goldenrod;
+  background-color: #4D6098;
+  border-color: #4D6098;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
 }
-.btn-primary:hover,
+.btn-primary:hover {
+    color: White;
+    background-color: Lime;
+    border-color: Lime;
+}
 .btn-primary:focus,
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
   color: white;
-  background-color: goldenrod;
-  border-color: goldenrod;
+  background-color: #4D6098;
+  border-color: #4D6098;
 }
 .btn-primary:active,
 .btn-primary.active,
@@ -94,17 +98,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: goldenrod;
-  border-color: goldenrod;
+  background-color: #4D6098;
+  border-color: #4D6098;
 }
 .btn-primary .badge {
-  color: goldenrod;
+  color: #4D6098;
   background-color: white;
 }
 .btn-xl {
   color: white;
-  background-color: goldenrod;
-  border-color: goldenrod;
+  background-color: #4D6098;
+  border-color: #4D6098;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
@@ -118,8 +122,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
   color: white;
-  background-color: goldenrod;
-  border-color: goldenrod;
+  background-color: #4D6098;
+  border-color: #4D6098;
 }
 .btn-xl:active,
 .btn-xl.active,
@@ -141,11 +145,11 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-  background-color: goldenrod;
-  border-color: goldenrod;
+  background-color: #4D6098;
+  border-color: #4D6098;
 }
 .btn-xl .badge {
-  color: goldenrod;
+  color: #4D6098;
   background-color: white;
 }
 .navbar-custom {
@@ -153,21 +157,21 @@ fieldset[disabled] .btn-xl.active {
   border-color: transparent;
 }
 .navbar-custom .navbar-brand {
-  color: goldenrod;
+  color: White;
   font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: goldenrod;
+  color: Lime;
 }
 .navbar-custom .navbar-collapse {
   border-color: rgba(255, 255, 255, 0.02);
 }
 .navbar-custom .navbar-toggle {
-  background-color: goldenrod;
-  border-color: goldenrod;
+  background-color: #4D6098;
+  border-color: #4D6098;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   color: white;
@@ -175,7 +179,7 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: goldenrod;
+  background-color: #4D6098;
 }
 .navbar-custom .nav li a {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -186,18 +190,18 @@ fieldset[disabled] .btn-xl.active {
 }
 .navbar-custom .nav li a:hover,
 .navbar-custom .nav li a:focus {
-  color: goldenrod;
+  color: lime;
   outline: none;
 }
 .navbar-custom .navbar-nav > .active > a {
   border-radius: 0;
   color: white;
-  background-color: goldenrod;
+  background-color: #4D6098;
 }
 .navbar-custom .navbar-nav > .active > a:hover,
 .navbar-custom .navbar-nav > .active > a:focus {
   color: white;
-  background-color: goldenrod;
+  background-color: #4D6098;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -228,7 +232,7 @@ fieldset[disabled] .btn-xl.active {
   }
 }
 header {
-  background-image: url('../img/comp1.jpg');
+  background-image: url('../img/GeoBak.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -443,7 +447,7 @@ section h3.section-subheading {
   height: 80px;
   position: absolute;
   z-index: 100;
-  background-color: goldenrod;
+  background-color: #4D6098;
   color: white;
   border-radius: 100%;
   border: 7px solid #f1f1f1;
@@ -598,7 +602,7 @@ section#contact .form-group textarea.form-control {
   height: 236px;
 }
 section#contact .form-control:focus {
-  border-color: goldenrod;
+  border-color: #4D6098;
   box-shadow: none;
 }
 section#contact ::-webkit-input-placeholder {
@@ -667,7 +671,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-  background-color: goldenrod;
+  background-color: #4D6098;
 }
 .btn:focus,
 .btn:active,
@@ -751,11 +755,11 @@ ul.social-buttons li a:active {
 }
 ::-moz-selection {
   text-shadow: none;
-  background: goldenrod;
+  background: #4D6098;
 }
 ::selection {
   text-shadow: none;
-  background: goldenrod;
+  background: #4D6098;
 }
 img::selection {
   background: transparent;
