--- a/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/ClientPasswordsPage.xaml
@@ -12,8 +12,8 @@
     <ContentPage.Content>
         <StackLayout Padding="20,10" x:Name="StackLayout" IsVisible="True">
             <Entry x:Name="PasswordEntry" IsPassword="True" IsVisible="True" Placeholder="Enter Your Password" TextChanged="PasswordEntry_OnTextChanged"></Entry>
-            <Button x:Name="ValdatePasswordButton" IsVisible="True" Text="Validate" Clicked="ValdatePasswordButton_OnClicked"></Button>
-            <Button x:Name="FingerprintButton" Text="Use Fingerprint" IsVisible="True" Clicked="FingerprintButton_OnClicked"></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White" x:Name="ValdatePasswordButton" IsVisible="True" Text="Validate" Clicked="ValdatePasswordButton_OnClicked"></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White" x:Name="FingerprintButton" Text="Use Fingerprint" IsVisible="True" Clicked="FingerprintButton_OnClicked"></Button>
             <StackLayout x:Name="StackLayout2" IsVisible="False" Padding="20,10">
             <SearchBar Placeholder="Search clients..." IsVisible="False" TextChanged="SearchBar_OnTextChanged"></SearchBar>
             <Picker x:Name="ClientPicker" SelectedIndexChanged="ClientPicker_OnSelectedIndexChanged"></Picker>
