--- a/MobileTsar/MobileTsar/Views/MapsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/MapsPage.xaml
@@ -12,8 +12,8 @@
        
         <Label Text="Client Address:" TextColor="White"></Label>
         <Picker x:Name="AddressPicker" SelectedIndexChanged="AddressPicker_OnSelectedIndexChanged"></Picker>
-      
-          <Button x:Name="btnNavigate" Text="Navigate to Client" Clicked="BtnNavigate_OnClicked" IsVisible="False"></Button>
+
+            <Button BackgroundColor="#4D6098" TextColor="White" x:Name="btnNavigate" Text="Navigate to Client" Clicked="BtnNavigate_OnClicked" IsVisible="False"></Button>
         </StackLayout>
     </ScrollView>
     
