--- a/MobileTsar/MobileTsar/Views/ScanPage.xaml
+++ b/MobileTsar/MobileTsar/Views/ScanPage.xaml
@@ -9,8 +9,8 @@
         <StackLayout Padding="20,10" HorizontalOptions="Center" VerticalOptions="Center">
             <Label TextColor="White" Text="Click to scan the barcode that was sent to you" FontSize="24"></Label>
             <!--<Button x:Name="EncodeButton" Text="Encode" Clicked="EncodeButton_OnClicked"></Button>-->
-            <Button x:Name="ScanButton" Text="Scan Barcode" Clicked="ScanButton_OnClicked"></Button>
-            <Button x:Name="LocationButton" Text="GPS" Clicked="LocationButton_OnClicked" IsVisible="False"></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White" x:Name="ScanButton" Text="Scan Barcode" Clicked="ScanButton_OnClicked"></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White" x:Name="LocationButton" Text="GPS" Clicked="LocationButton_OnClicked" IsVisible="False"></Button>
 
             <Label x:Name="LabelLAt"></Label>
             <Label x:Name="LabelLong"></Label>
