--- a/MobileTsar/MobileTsar/Views/TimesheetsPage.xaml
+++ b/MobileTsar/MobileTsar/Views/TimesheetsPage.xaml
@@ -18,10 +18,10 @@
     <StackLayout Orientation="Vertical" Spacing="30" Padding="30" VerticalOptions="Center">
         <!--<Entry Text="{Binding AccessToken}"></Entry>-->
         <Label x:Name="UsernameLabel" TextColor="White" FontSize="40" HorizontalTextAlignment="Center"></Label>
-        <Button Text="Log Off" Clicked="LogOffButton_OnClicked"></Button>
-        <Button x:Name="GetTimesheetsButton" Clicked="GetTimesheetsButton_OnClicked"  Command="{Binding GetTimesheetsCommand}" Text="Get Timesheets"></Button>
-        <Button x:Name="AddnewTimesheetBtn" Text="Add new timesheet" Clicked="Button_OnClicked"></Button>
-        <Button Text="Timesheet List" Clicked="TimesheetsList" IsVisible="False"></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White" Text="Log Off" Clicked="LogOffButton_OnClicked"></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White"  x:Name="GetTimesheetsButton" Clicked="GetTimesheetsButton_OnClicked"  Command="{Binding GetTimesheetsCommand}" Text="Get Timesheets"></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White"  x:Name="AddnewTimesheetBtn" Text="Add new timesheet" Clicked="Button_OnClicked"></Button>
+            <Button BackgroundColor="#4D6098" TextColor="White"  Text="Timesheet List" Clicked="TimesheetsList" IsVisible="False"></Button>
         <ListView x:Name="TimesheetListView"   ItemsSource="{Binding Timesheets}" HasUnevenRows="True" ItemTapped="SignPage">
             <ListView.ItemTemplate>
                 <DataTemplate>
