Quotations without pdf

--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -58,7 +58,7 @@
         <tr>
             <td><input type="button" style="height:50px;width:200px" title="Upload" value="Upload" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "AccomodationFiles")'" /></td>     
             <td></td>
-            <td><input type="button" style="height:50px;width:200px" title="Upload" value="Upload" class="btn btn-primary" onclick="location.href='@Url.Action("CreateProduct", "Products")'" /></td>     
+            <td><input type="button" style="height:50px;width:200px" title="Upload" value="Add Product" class="btn btn-primary" onclick="location.href='@Url.Action("CreateProduct", "Products")'" /></td>     
             <td></td>
         </tr>
     </tbody>
