--- a/TSAR/Views/Products/CreateProduct.cshtml
+++ b/TSAR/Views/Products/CreateProduct.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutOther.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Products</h2>
 
 
 @using (Html.BeginForm())
@@ -40,7 +40,25 @@
             </div>
         </div>
 
+        @if (User.IsInRole("Client"))
+        {
+            <div class="form-group">
+                <div align="center">
+                    @Html.LabelFor(model => model.Selected, htmlAttributes: new { @class = "control-label" })
+                </div>
 
+
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.Selected)
+                    @Html.ValidationMessageFor(model => model.Selected, "", new { @class = "text-danger" })
+                </div>
+
+            </div>
+
+
+
+
+        }
 
 
         @*<div class="form-group">
@@ -59,17 +77,42 @@
             </div>
         </div>*@
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        @if (User.IsInRole("Client"))
+        {
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="button" value="Get Quotation" onclick="location.href='@Url.Action("GetQuotation", "Products")'" />
+                </div>
             </div>
-        </div>
+        }
+
+        else
+        {
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="button" value="Create Product" onclick="location.href='@Url.Action("CreateProduct", "Products")'" />
+                </div>
+            </div>
+        }
+
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+@if (User.IsInRole("Client"))
+{
+    <div>
+        @Html.ActionLink("Back to List", "MyQuotation")
+    </div>
+}
+else
+{
+    <div>
+        @Html.ActionLink("Back to List", "Index")
+    </div>
+}
+
+
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
