--- a/TSAR/Views/Products/EditProduct.cshtml
+++ b/TSAR/Views/Products/EditProduct.cshtml
@@ -60,7 +60,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="button" value="Edit Product" onclick="location.href='@Url.Action("EditProduct", "Products")'" />
             </div>
         </div>
     </div>
