--- a/TSAR/Views/Manage/ClientMenu.cshtml
+++ b/TSAR/Views/Manage/ClientMenu.cshtml
@@ -21,7 +21,7 @@
     </tr>
         
         <tr>
-            <td><input type="button" style="height:50px;width:200px" title="Get Quotation" value="Get Quotation" class="btn btn-primary" onclick="location.href='@Url.Action("GetQuotation", "Products")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="Get Quotation" value="Get Quotation" class="btn btn-primary" onclick="location.href='@Url.Action("EditProduct", "Products")'" /></td>
         </tr>
     </tbody>
 </table>
