--- a/TSAR/Views/Manage/ConsultantMenu.cshtml
+++ b/TSAR/Views/Manage/ConsultantMenu.cshtml
@@ -19,7 +19,7 @@
         <tr>
             <td><input type="button" style="height:50px;width:200px" title="New Timesheet" value="Project Timesheet" class="btn btn-primary" onclick="location.href='@Url.Action("ProjectTimeSheet", "Timesheets")'" /></td>
             <td><input type="button" style="height:50px;width:200px" title="Payroll" value="Payroll" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Payrolls")'" /></td>
-            <td><input type="button" style="height:50px;width:200px" title="Payroll" value="Add Product" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Products")'" /></td>
+            <td><input type="button" style="height:50px;width:200px" title="Add Products" value="Add Products" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Products")'" /></td>
             
 <td></td>
             <td></td>
