--- a/TSAR/Views/Products/GetQuotation.cshtml
+++ b/TSAR/Views/Products/GetQuotation.cshtml
@@ -19,6 +19,7 @@
     <table class="table bg-light-gray">
         <tr>
             
+            
             <th>
                 @Html.DisplayNameFor(model => model.ProductName)
             </th>
@@ -61,6 +62,10 @@
                 <td>
                     @Html.ActionLink("Details", "Details", new { id = p.ProductId })
                 </td>
+                <td>
+                    <a href="@Url.Action("GenerateQuotationPDF","Products")" class="hidden-print" ﻿>GENERATE PDF</a>
+                </td>
+
             </tr>
         }
 
