--- a/TSAR/Views/Manage/ManagerMenu.cshtml
+++ b/TSAR/Views/Manage/ManagerMenu.cshtml
@@ -65,6 +65,7 @@
         <td></td>
         <td></td>
         <td><input type="button" style="height:50px;width:200px" title="View targets" value="View targets" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Target")'" /></td>
+        <td><input type="button" style="height:50px;width:200px" title="Create Task" value="Create Task" class="btn btn-primary" onclick="location.href='@Url.Action("Create", "Tasks")'" /> </td>
     </tr>
     </tbody>
 </table>
