--- a/TSAR/Views/Tasks/ViewTasks.cshtml
+++ b/TSAR/Views/Tasks/ViewTasks.cshtml
@@ -13,7 +13,7 @@
     <meta charset="utf-8">
     <meta name="robots" content="noindex">
 
-    <title>Kanban-Board - Bootsnipp.com</title>
+    <title>TSAR To-Do-List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <style type="text/css">
